log
Fri, Mar 21, 2025  9:42:29 AM: 
 tests:  0|5
total_score: 0/70
2fc14fb
Fri, Mar 21, 2025  9:43:34 AM: 
 exercises.c | 32 ++++++++++++++++++++++++++++++--
 1 file changed, 30 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:98:17: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    Stack* aux = create_stack;
                 ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
718f164
Fri, Mar 21, 2025  9:44:21 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
ef1863a
Fri, Mar 21, 2025  9:46:38 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
c3355ea
Fri, Mar 21, 2025 10:28:51 AM: 
 exercises.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:118:17: error: implicit declaration of function 'crearPila' [-Werror=implicit-function-declaration]
    char* pila = crearPila();
                 ^~~~~~~~~
exercises.c:118:17: error: initialization makes pointer from integer without a cast [-Werror=int-conversion]
cc1.exe: all warnings being treated as errors
Compilation failed
723d93e
Fri, Mar 21, 2025 10:30:20 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|1
total_score: 50/70
7a12933
Fri, Mar 21, 2025 10:36:33 AM: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:145:12: error: called object 'top' is not a function or function pointer
    return (top(pila) == NULL);
            ^~~
exercises.c:119:8: note: declared here
    int top = -1;
        ^~~
exercises.c:146:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
828ecb3
Fri, Mar 21, 2025 10:43:09 AM: 
 exercises.c | 16 ++++++++--------
 1 file changed, 8 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:145:16: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
    return (top(pila) == NULL);
                ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'char *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
52bb371
Fri, Mar 21, 2025 10:49:44 AM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|0
total_score: 70/70
c3f829b
